--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,18 @@ version = "0.1.0"
 description = ""
 authors = ["Leonid <shapirov.l@2gis.com.ua>"]
 packages = [
-	{ include = 'brain_games'}
+	{ include = 'brain_games/'}
 ]
 
 [tool.poetry.dependencies]
 python = "^3.6"
+prompt = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.scripts]
+brain-games = 'brain_games.scripts.brain_games:main'
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
-[tool.poetry.scripts]
-brain-games = 'brain_games.scripts.brain_games:main'
