--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "odessitqwerty_brain_games"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["Leonid <shapirov.l@2gis.com.ua>"]
 packages = [
-	{ include = 'brain_games/'}
+	{ include = 'brain_games'}
 ]
 
 [tool.poetry.dependencies]
@@ -16,6 +16,7 @@ flake8 = "^3.7"
 
 [tool.poetry.scripts]
 brain-games = 'brain_games.scripts.brain_games:main'
+brain-even = 'brain_games.scripts.brain_even:main'
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
