add game brain-gcd

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "odessitqwerty_brain_games"
-version = "0.1.5"
+version = "0.1.10"
 
 description = ""
 authors = ["Leonid <shapirov.l@2gis.com.ua>"]
@@ -19,6 +19,7 @@ flake8 = "^3.7"
 brain-games = 'brain_games.scripts.brain_games:main'
 brain-even = 'brain_games.scripts.brain_even:main'
 brain-calc = 'brain_games.scripts.brain_calc:main'
+brain-gcd = 'brain_games.scripts.brain_gcd:main'
 
 [build-system]
 requires = ["poetry>=0.12"]
