--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "odessitqwerty_brain_games"
-version = "0.1.11"
+version = "0.1.10"
 
 description = ""
 authors = ["Leonid <shapirov.l@2gis.com.ua>"]
@@ -21,6 +21,7 @@ brain-even = 'brain_games.scripts.brain_even:main'
 brain-calc = 'brain_games.scripts.brain_calc:main'
 brain-gcd = 'brain_games.scripts.brain_gcd:main'
 brain-progression = 'brain_games.scripts.brain_progression:main'
+brain-prime = 'brain_games.scripts.brain_prime:main'
 
 [build-system]
 requires = ["poetry>=0.12"]
